syntax = "proto3";

option java_multiple_files = true;
option java_package = "xyz.hoper.protobuf";
option java_outer_classname = "HelloWorld";

package protobuf;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    int64 time = 1;
}
